@@ -1,9 +1,36 @@
 #FROM openjdk:11.0.1-jdk-oraclelinux7
-# Use the official WebGoat image from Docker Hub
-FROM docker.io/webgoat/webgoat:latest
+FROM docker.io/eclipse-temurin:21.0.3_9-jre
+LABEL NAME = "WebGoat: A deliberately insecure Web Application"
+LABEL maintainer = "WebGoat team"
 
-# Expose the WebGoat default port
+RUN \
+  useradd -ms /bin/bash webgoat && \
+  chgrp -R 0 /home/webgoat && \
+  chmod -R g=u /home/webgoat
+
+USER webgoat
+
+COPY --chown=webgoat target/webgoat-*.jar /home/webgoat/webgoat.jar
+
 EXPOSE 8080
+EXPOSE 9090
 
-# Define the entry point to start the application
-ENTRYPOINT ["java", "-jar", "webgoat-server.jar"]
+ENV TZ=Europe/Amsterdam
+
+WORKDIR /home/webgoat
+ENTRYPOINT [ "java", \
+   "-Duser.home=/home/webgoat", \
+   "-Dfile.encoding=UTF-8", \
+   "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.util=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.text=ALL-UNNAMED", \
+   "--add-opens", "java.desktop/java.beans=ALL-UNNAMED", \
+   "--add-opens", "java.desktop/java.awt.font=ALL-UNNAMED", \
+   "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.io=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.util=ALL-UNNAMED", \
+   "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", \
+   "--add-opens", "java.base/java.io=ALL-UNNAMED", \
+   "-Drunning.in.docker=true", \
+   "-jar", "webgoat.jar", "--server.address", "0.0.0.0" ]
